align link inputs correctly

--- a/css/style_smartphone.less
+++ b/css/style_smartphone.less
@@ -283,6 +283,7 @@ figure.adfigure {
 .search_article form input[type="submit"] {
     display: table-cell;
     width: 70px;
+    margin-left: 30px;
 }
 
 .addthis_toolbox {
@@ -293,6 +294,7 @@ figure.adfigure {
 .sprite-links {
     float: left;
     margin-top: 5px;
+    margin-bottom: -5px;
     background-image: url('sprites/links.png');
     background-repeat: no-repeat;
 }
